artist names alignment fixed

--- a/vibe-check-frontend/src/components/screen3/screen3.css
+++ b/vibe-check-frontend/src/components/screen3/screen3.css
@@ -137,9 +137,6 @@
     height: 100%;
 }
 
-
-/* Remaining Artits */
-
 /* Artist Names */
 .artist-name-wrapper{
     height: 100%;
@@ -170,8 +167,10 @@
 .artist-number{
     display: flex;
     justify-content: center;
-    width: 20px;
+    align-items: center;
+    width: 30px;
     font-weight: 700;
+    font-size: 20px;
 }
 
 .artist-name{
@@ -179,6 +178,7 @@
     align-items: center;
     font-weight: 700;
     white-space: nowrap;
+    font-size: 18px;
     
 }
 
@@ -234,6 +234,14 @@
 
     .names{
         margin-top: 15px;
+    }
+
+    .artist-number{
+        font-size: 22px;
+    }
+    
+    .artist-name{
+        font-size: 20px;
     }
     
 }
